--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-typist": "^2.0.1",
+    "@types/styled-components": "^5.1.10",
     "classnames": "^2.3.1",
     "firebase": "^8.6.8",
     "node-sass": "5.0.0",
@@ -19,6 +20,7 @@
     "react-hot-toast": "^2.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
